--- a/LateX/main.tex
+++ b/LateX/main.tex
@@ -24,6 +24,7 @@
 \definecolor{royalblue}{RGB}{65,105,225}
 \definecolor{blue}{RGB}{197,221,246}
 \definecolor{green}{RGB}{33,183,98}
+
 % -----------------------------------------------------------------
 
 \pagestyle{fancy}
@@ -59,33 +60,13 @@
     tabsize=2
 } \lstset{style=codeStyle}
 
-\lstdefinestyle{longBlock}{
-    commentstyle=\color{teal},
-    keywordstyle=\color{Magenta},
-    numberstyle=\tiny\color{gray},
-    stringstyle=\color{violet},
-    basicstyle=\ttfamily\scriptsize,
-    breakatwhitespace=false,         
-    breaklines=true,                 
-    captionpos=b,                    
-    keepspaces=true,                 
-    numbers=left,                    
-    numbersep=5pt,                  
-    showspaces=false,                
-    showstringspaces=false,
-    showtabs=false,                  
-    tabsize=2
-} \lstset{style=codeStyle}
-
-\lstset{aboveskip=20pt,belowskip=20pt}
-
 
 \hypersetup{
-    colorlinks,
-    linkcolor=CornflowerBlue,
-    citecolor=CornflowerBlue
+  colorlinks,
+  citecolor=royalblue,
+  linkcolor=royalblue,
+  urlcolor=royalblue
 }
-
 
 \newtheorem{definition}{Definizione}[section]
 \newtheorem{theorem}{Teorema}[section]
